syntax = "proto3";

package orders.v1;

option go_package = "course-go-avito-Orurh/internal/proto;orderspb";

import "google/protobuf/timestamp.proto";

// Минимальная модель заказа, которую используем в service-courier:
// номера полей и типы ДОЛЖНЫ совпасть с сервером.
message Order {
  string id = 1;
  string status = 9;
  google.protobuf.Timestamp created_at = 10;
}

// Запрос на получение списка заказов
message GetOrdersRequest {
  google.protobuf.Timestamp from = 1;
}

// Запрос на получение заказа по id
message GetOrderByIDRequest {
  string id = 1;
}

// Ответ на запрос получения заказов
message GetOrdersResponse {
  repeated Order orders = 1;
}

// Ответ на запрос получения заказа по id
message GetOrderByIDResponse {
  Order order = 1;
}

// Интерфейс службы, возвращающей заказы
service OrdersService {
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
  rpc GetOrderByID(GetOrderByIDRequest) returns (GetOrderByIDResponse);
}
